# FlaminGo

./: .gitignore
Testing/game_engine/: .gitignore  CMakeLists.txt  full_game_seq_test.cpp  scoring_test.cpp  test_helpers.h
Testing/game_engine/boards/: 1377954818019999562.txt  1378127086019999916.txt  1378473498019999334.txt  1378817797019999354.txt  1378905168019999593.txt  1378906064019999572.txt  1378994738019999292.txt  1379337647019999905.txt  1379506130019999000.txt  1379682852019999111.txt  1380286665019999542.txt  1380287523019999912.txt  1380370624019999863.txt  1380633453019999392.txt  1380805714019999272.txt  1380805984019999709.txt  1380893324019999237.txt  1380977012019999841.txt  1380977738019999375.txt  1381065731019999146.txt  1381152007019999504.txt  1381153210019999810.txt  1381408238019999137.txt  1381410950019999093.txt  1381495741019999239.txt  1381557685019999548.txt  1381584385019999573.txt  1381927424019999837.txt  1382016209019999535.txt  1382016830019999159.txt  1382275040019999758.txt  1382446415019999176.txt  1382450549019999315.txt  1382618677019999876.txt  1382878442019999021.txt  1382879723019999655.txt  1383052924019999391.txt  1383053401019999282.txt  1383654926019999147.txt  1383656763019999942.txt  (+253 more)
Testing/game_engine/games/: 1377954818019999562.txt  1378127086019999916.txt  1378473498019999334.txt  1378817797019999354.txt  1378905168019999593.txt  1378906064019999572.txt  1378994738019999292.txt  1379337647019999905.txt  1379506130019999000.txt  1379682852019999111.txt  1380286665019999542.txt  1380287523019999912.txt  (+180 more)
(+36 files in other folders)
